--- a/Part1_3.ipynb
+++ b/Part1_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "81d33669",
+   "id": "07ede17a",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bef31d8",
+   "id": "a0f45542",
    "metadata": {},
    "source": [
     "---"
@@ -456,7 +456,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "c4b482f613e4b2b2a005a46611365dd2",
+     "checksum": "771224432376f871d126b49592f501d3",
      "grade": false,
      "grade_id": "cell-379b9354bac4ee0b",
      "locked": true,
@@ -469,7 +469,7 @@
     "## 1.2 EDA의 결과를 토대로 Feature Engineering 및 Preprocessing을 수행하는 함수 `eda_process`를 작성하세요.\n",
     "\n",
     "- 결측치를 적절히 처리하세요.\n",
-    "    - **Data를 drop하지 말고, 적절한 값으로 채워넣어 보세요.**\n",
+    "    - **Row를 drop하지 말고, 적절한 값으로 채워넣어 보세요.**\n",
     "    - 전처리가 완료된 train, test 데이터의 크기는 각각 **59947, 19994**입니다.\n",
     "- 새로운 feature를 만드는 작업뿐만이 아니라, 필요한 feature가 적절한 데이터 타입을 가지고 있지 않다면 변환합니다."
    ]
@@ -482,7 +482,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "7090e03b5b5300dec2f3ef5c9a7bd6d6",
+     "checksum": "d7d46f8652b41b55391f244b89af289e",
      "grade": false,
      "grade_id": "1-2",
      "locked": false,
@@ -500,8 +500,6 @@
     "# YOUR CODE ENDS HERE\n",
     "\n",
     "def eda_process(df):\n",
-    "    feature = None\n",
-    "\n",
     "    # State 컬럼 처리 : 결측치 및 IL이 아닌 row 삭제\n",
     "    df.dropna(subset=[\"State\"], how=\"any\", axis=0, inplace=True)\n",
     "    df = df.query(\"State == 'IL'\")\n",
@@ -518,7 +516,7 @@
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
     "\n",
-    "    return feature"
+    "    return df"
    ]
   },
   {
@@ -549,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b503e36c",
+   "id": "d37ba45b",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -571,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a8e6a46",
+   "id": "1442e4a1",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -615,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4962075",
+   "id": "a003f3e1",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -810,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5b5aba6",
+   "id": "5f8bd689",
    "metadata": {},
    "source": [
     "### 아래 셀을 실행시켜 모델의 Test score을 확인해 보세요.\n",
@@ -826,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "676ede70",
+   "id": "89861706",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -870,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "528fdeb0",
+   "id": "539e38c1",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -894,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a63dd728",
+   "id": "f769485e",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -917,13 +915,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53131846",
+   "id": "e6cb7e41",
    "metadata": {
     "deletable": false,
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "a30d986d0ccde1a361efa4e9f1589274",
+     "checksum": "48665d465a1e3fc707ad1a4bb5642f9f",
      "grade": false,
      "grade_id": "cell-0b8a22eeb09a60ef",
      "locked": true,
@@ -933,13 +931,7 @@
     }
    },
    "source": [
-    "# Part 3 - Visualization\n",
-    "\n",
-    "모델의 해석을 위한 시각화를 해주세요. 아래의 제시 된 종류 중 **2가지**를 선택하세요 (시각화에서 가장 중요한 것은 **여러분의 해석**입니다):\n",
-    "- Permutation Importances\n",
-    "- Partial Dependence Plot, 1 feature isolation\n",
-    "- Partial Dependence Plot, 2 features interaction\n",
-    "- Shapley Values (SHAP)"
+    "# Part 3 - Visualization"
    ]
   },
   {
@@ -1003,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b241a08",
+   "id": "e5995e64",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1031,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf9df3f5",
+   "id": "55f96610",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1056,7 +1048,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01e23314",
+   "id": "2d609bf4",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1085,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "488b2a2c",
+   "id": "2512abd9",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1114,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8ec407d",
+   "id": "c1ad3372",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1139,7 +1131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa2758f3",
+   "id": "1d422067",
    "metadata": {},
    "source": [
     "## 3.2 1변수 PDP Plot을 생성하는 `get_pdp_isolated` 함수를 작성하세요."
@@ -1148,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f13c581",
+   "id": "fbaed864",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1180,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd4e1416",
+   "id": "4938e383",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1210,7 +1202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4951346",
+   "id": "e2e68510",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1239,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a611e5a3",
+   "id": "3cd16341",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1273,7 +1265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a40f2eae",
+   "id": "d180ba2b",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1299,7 +1291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93a8987c",
+   "id": "61531eeb",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1321,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97a82a5c",
+   "id": "16d17890",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1353,7 +1345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd9ce183",
+   "id": "572813e8",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1378,7 +1370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8063b81c",
+   "id": "0e4fbbe4",
    "metadata": {},
    "source": [
     "---"
@@ -1386,7 +1378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6203ac2",
+   "id": "3cb5d8d0",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
