--- a/Part1_3.ipynb
+++ b/Part1_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "07ede17a",
+   "id": "d1355513",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0f45542",
+   "id": "54a9c294",
    "metadata": {},
    "source": [
     "---"
@@ -206,7 +206,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "761e9b21034a560f5f15ddcedd293d38",
+     "checksum": "93a826b6dbeaa499b61f199a2862cb4a",
      "grade": false,
      "grade_id": "cell-2e2530fc1a4e5a3b",
      "locked": true,
@@ -222,7 +222,7 @@
     "\n",
     "- AKA: 대중들에게 알려져 있는 상표 이름\n",
     "\n",
-    "- License number: 사업자 고유번호 (한국으로 치면 사업자등록번호)\n",
+    "- License number: 사업자 고유번호 (사업자등록번호)\n",
     "\n",
     "- Type of facility: 매장 업종 \n",
     "\n",
@@ -456,7 +456,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "771224432376f871d126b49592f501d3",
+     "checksum": "cbc8a64e876a1cc768c20200e3170928",
      "grade": false,
      "grade_id": "cell-379b9354bac4ee0b",
      "locked": true,
@@ -471,7 +471,8 @@
     "- 결측치를 적절히 처리하세요.\n",
     "    - **Row를 drop하지 말고, 적절한 값으로 채워넣어 보세요.**\n",
     "    - 전처리가 완료된 train, test 데이터의 크기는 각각 **59947, 19994**입니다.\n",
-    "- 새로운 feature를 만드는 작업뿐만이 아니라, 필요한 feature가 적절한 데이터 타입을 가지고 있지 않다면 변환합니다."
+    "- 새로운 feature를 만드는 작업뿐만이 아니라, 필요한 feature가 적절한 데이터 타입을 가지고 있지 않다면 변환합니다.\n",
+    "- 시간 배분을 고려햐여 적절한 수준으로 수행하세요!"
    ]
   },
   {
@@ -482,7 +483,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "d7d46f8652b41b55391f244b89af289e",
+     "checksum": "fbdd1e318546f5ded4a4de13110416f4",
      "grade": false,
      "grade_id": "1-2",
      "locked": false,
@@ -498,6 +499,7 @@
     "\n",
     "\n",
     "# YOUR CODE ENDS HERE\n",
+    "\n",
     "\n",
     "def eda_process(df):\n",
     "    # State 컬럼 처리 : 결측치 및 IL이 아닌 row 삭제\n",
@@ -640,7 +642,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "b0a67bea088ebf2175809d34f83f7016",
+     "checksum": "755c04f081e54ada5549c1677d6b100b",
      "grade": false,
      "grade_id": "2-1",
      "locked": false,
@@ -659,7 +661,7 @@
     "    \n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
-    "    \n",
+    "\n",
     "    return X, y"
    ]
   },
@@ -697,7 +699,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "aa1450a933c8c26da891d3967e9345d7",
+     "checksum": "4db5632ff4cf946db2c75f46899aabe9",
      "grade": false,
      "grade_id": "cell-f54c8204c1a466c0",
      "locked": true,
@@ -708,7 +710,7 @@
    },
    "source": [
     "## 2.2 모델을 생성하고 학습하는 `fit` 함수 및 1일 확률을 반환하는 `predict` 함수를 작성하세요. \n",
-    "- Scikit-learn의 `pipeline`을 활용하여 범주형 feature의 encoder, imputer을 포함하는 preprocessing 파이프라인을 구축하세요\n",
+    "- Scikit-learn의 `pipeline`을 활용하여 학습 파이프라인을 생성하세요.\n",
     "- `RandomizedSearchCV`를 사용해 CV를 진행하세요.\n",
     "    - 적어도 두 개 이상의 하이퍼파라미터에 대해 탐색을 진행하세요.\n",
     "    - auc score을 최대화하는 하이퍼파라미터 조합을 선택하세요.\n",
@@ -724,7 +726,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "eb7d057e49ff4d34bf52e4f4a7b07d35",
+     "checksum": "a5cbb141ba5bf08e2da2c300236e2a4b",
      "grade": false,
      "grade_id": "2-2",
      "locked": false,
@@ -738,6 +740,7 @@
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.metrics import classification_report\n",
+    "\n",
     "# import any libraries needed\n",
     "# YOUR CODE HERE\n",
     "\n",
@@ -746,39 +749,31 @@
     "\n",
     "\n",
     "def fit(X_train, y_train):\n",
-    "    preprocess_pipeline = None # preprocess_pipeline = make_pipeline(...)\n",
-    "    clf = None # clf = RandomizedSearchCV(...)\n",
-    "        \n",
-    "    # YOUR CODE HERE\n",
-    "    \n",
-    "    \n",
-    "    # YOUR CODE ENDS HERE\n",
-    "    \n",
-    "    X_train_processed = preprocess_pipeline.fit_transform(X_train)\n",
+    "    pipeline = None # pipeline = make_pipeline(...)\n",
+    "    clf = None  # clf = RandomizedSearchCV(...)\n",
     "\n",
     "    # YOUR CODE HERE\n",
     "    \n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
     "\n",
-    "    clf.fit(X_train_processed, y_train)\n",
-    "    print('Optimal Hyperparameter:', clf.best_params_)\n",
-    "    print('AUC:', clf.best_score_)\n",
+    "    clf.fit(X_train, y_train)\n",
+    "    print(\"Optimal Hyperparameter:\", clf.best_params_)\n",
+    "    print(\"AUC:\", clf.best_score_)\n",
     "\n",
-    "    return preprocess_pipeline, clf\n",
+    "    return clf\n",
     "\n",
     "\n",
-    "def predict(X_preprocessed, y, best_estimator):\n",
+    "def predict(X, y, best_estimator):\n",
     "    y_pred_proba = None\n",
-    "    \n",
+    "\n",
     "    # YOUR CODE HERE\n",
     "    \n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
-    "    \n",
-    "    report = classification_report(y, y_pred_proba > .5)\n",
-    "    return y_pred_proba, report    \n",
-    "    "
+    "\n",
+    "    report = classification_report(y, y_pred_proba > 0.5)\n",
+    "    return y_pred_proba, report"
    ]
   },
   {
@@ -790,7 +785,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "eecf292e6cf60b70ddf9003740beb090",
+     "checksum": "c14c25f9ffc7b2f270935f6331034c7f",
      "grade": true,
      "grade_id": "2-2_test_code",
      "locked": true,
@@ -802,8 +797,7 @@
    },
    "outputs": [],
    "source": [
-    "preprocess_pipeline, clf = fit(X_train, y_train)\n",
-    "X_test_preprocessed = preprocess_pipeline.transform(X_test)"
+    "clf = fit(X_train, y_train)"
    ]
   },
   {
@@ -830,7 +824,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "be549fceb713ce06d4c0b8c8a4c6a3e6",
+     "checksum": "e47c884d927e9911914d9a6c5645a4aa",
      "grade": false,
      "grade_id": "cell-get_auc",
      "locked": true,
@@ -841,26 +835,29 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.metrics import roc_curve, roc_auc_score \n",
+    "import warnings\n",
+    "from sklearn.metrics import roc_curve, roc_auc_score\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "\n",
     "def plot_roc(y, y_pred_proba):\n",
     "    auc_score = roc_auc_score(y, y_pred_proba)\n",
     "    fpr, tpr, _ = roc_curve(y, y_pred_proba)\n",
     "    baseline_fpr, baseline_tpr, _ = roc_curve(y, [0] * len(y))\n",
-    "    \n",
-    "    plt.style.use('ggplot')\n",
-    "    plt.plot(fpr, tpr, label='Model')\n",
-    "    plt.plot(baseline_fpr, baseline_tpr, linestyle='--', label='Baseline')\n",
-    "    plt.xlabel('False Positive Rate', size=12)\n",
-    "    plt.ylabel('True Positive Rate', size=12)\n",
-    "    plt.title('Receiver Operating Characteristic')\n",
-    "    plt.legend(prop={'size': 12})\n",
+    "\n",
+    "    plt.style.use(\"ggplot\")\n",
+    "    plt.plot(fpr, tpr, label=\"Model\")\n",
+    "    plt.plot(baseline_fpr, baseline_tpr, linestyle=\"--\", label=\"Baseline\")\n",
+    "    plt.xlabel(\"False Positive Rate\", size=12)\n",
+    "    plt.ylabel(\"True Positive Rate\", size=12)\n",
+    "    plt.title(\"Receiver Operating Characteristic\")\n",
+    "    plt.legend(prop={\"size\": 12})\n",
     "    plt.show()\n",
     "    return auc_score\n",
     "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "y_test_pred_proba, report = predict(X_test_preprocessed, y_test, clf.best_estimator_)\n",
+    "\n",
+    "y_test_pred_proba, report = predict(X_test, y_test, clf.best_estimator_)\n",
     "print(report)\n",
     "auc_score = plot_roc(y_test, y_test_pred_proba)"
    ]
@@ -921,7 +918,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "48665d465a1e3fc707ad1a4bb5642f9f",
+     "checksum": "31e55dc861df4eb3332bb7a176fe9a37",
      "grade": false,
      "grade_id": "cell-0b8a22eeb09a60ef",
      "locked": true,
@@ -931,7 +928,47 @@
     }
    },
    "source": [
-    "# Part 3 - Visualization"
+    "# Part 3 - Visualization\n",
+    "- `eli5`의 `PermutationImportance`, `pdpbox` 등의 라이브러리에서는 이미 전처리가 완료되어 수치형 자료로 변환된 독립변수들을 입력으로 받습니다.\n",
+    "- 따라서, 2.2에서 생성한 pipeline을 **전처리를 위한 부분**과 **예측 모델**로 나눠 주어야 합니다.\n",
+    "    - 전처리를 위한 부분을 거친 후에는 모든 특성들이 수치형이어야 합니다. \n",
+    "- 아래 셀에서 해당 과정을 수행해 주세요.\n",
+    "    1. `pipeline`을 `preprocess_pipeline`과 `model_pipeline`으로 나눠 주세요.\n",
+    "    2. `preprocess_pipeline`으로 `X_test`를 transform하여 `X_test_preprocessed`를 생성하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9418f6bf",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "fea0672ba09f1e0e208139dfb18c8d21",
+     "grade": false,
+     "grade_id": "p3_preprocess",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pipeline = clf.best_estimator_\n",
+    "preprocess_pipeline = None\n",
+    "model = None\n",
+    "\n",
+    "# YOUR CODE HERE\n",
+    "\n",
+    "\n",
+    "# YOUR CODE ENDS HERE\n",
+    "X_test_preprocessed = None\n",
+    "# YOUR CODE HERE\n",
+    "\n",
+    "\n",
+    "# YOUR CODE ENDS HERE"
    ]
   },
   {
@@ -965,7 +1002,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "d2bbc5db3b1d2dbe04d18bb6007ee30b",
+     "checksum": "f677aec29eb277e214c999f8f47622d6",
      "grade": false,
      "grade_id": "3-1",
      "locked": false,
@@ -979,45 +1016,18 @@
     "import eli5\n",
     "from eli5.sklearn import PermutationImportance\n",
     "\n",
-    "def get_permutation_importance(X_preprocessed, y, best_estimator):\n",
+    "\n",
+    "def get_permutation_importance(X, y, model):\n",
     "    permuter = None\n",
     "    # permuter = PermutationImportance(..., n_iter=5, random_state=42)\n",
-    "    \n",
+    "\n",
     "    # YOUR CODE HERE\n",
     "    \n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
-    "    permuter.fit(X_preprocessed, y)\n",
-    "    \n",
+    "    permuter.fit(X, y)\n",
+    "\n",
     "    return permuter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5995e64",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "fa9ea65e5c6afa205bd74011f746b5a3",
-     "grade": false,
-     "grade_id": "cell-536899368379be0c",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "permuter = get_permutation_importance(X_test_preprocessed, y_test, clf.best_estimator_)\n",
-    "eli5.show_weights(\n",
-    "    permuter, \n",
-    "    top=None, \n",
-    "    feature_names=X_test.columns.tolist()\n",
-    ")"
    ]
   },
   {
@@ -1029,7 +1039,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "82bba45b67a635d5030b20b93adc6442",
+     "checksum": "82d2aed0210bf3dcdacd74d21f77ef9f",
      "grade": true,
      "grade_id": "3-1_test_code",
      "locked": true,
@@ -1041,8 +1051,14 @@
    },
    "outputs": [],
    "source": [
+    "permuter = get_permutation_importance(X_test_preprocessed, y_test, model)\n",
+    "eli5.show_weights(permuter, top=None, feature_names=X_test.columns.tolist())\n",
     "print(\"Top3 Important Features:\")\n",
-    "p_i = sorted(list(zip(X_test.columns.tolist(), permuter.feature_importances_)), key=lambda x: x[1], reverse=True)\n",
+    "p_i = sorted(\n",
+    "    list(zip(X_test.columns.tolist(), permuter.feature_importances_)),\n",
+    "    key=lambda x: x[1],\n",
+    "    reverse=True,\n",
+    ")\n",
     "print(p_i[:3])"
    ]
   },
@@ -1134,7 +1150,8 @@
    "id": "1d422067",
    "metadata": {},
    "source": [
-    "## 3.2 1변수 PDP Plot을 생성하는 `get_pdp_isolated` 함수를 작성하세요."
+    "## 3.2 1변수 PDP Plot을 생성하는 `get_pdp_isolated` 함수를 작성하세요.\n",
+    "- `feature` 인자를 기준으로 1변수 PDP Plot을 생성합니다."
    ]
   },
   {
@@ -1145,7 +1162,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "522a5e94334cbb841f58bbf5216c5a17",
+     "checksum": "0b3cfb5e55690b59ab816e776ed87321",
      "grade": false,
      "grade_id": "3-2",
      "locked": false,
@@ -1158,14 +1175,15 @@
    "source": [
     "from pdpbox.pdp import pdp_isolate, pdp_plot\n",
     "\n",
-    "def get_pdp_isolated(df, best_estimator, feature):\n",
+    "\n",
+    "def get_pdp_isolated(dataset, model, feature):\n",
     "    pdp_isolated = None\n",
-    "    \n",
+    "\n",
     "    # YOUR CODE HERE\n",
     "    \n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
-    "    \n",
+    "\n",
     "    return pdp_isolated"
    ]
   },
@@ -1178,7 +1196,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "bb68eda4d0c516a57ab74f79874f0ce0",
+     "checksum": "4160913f948338d22ef461e7a89ff211",
      "grade": true,
      "grade_id": "3-2_test_code",
      "locked": true,
@@ -1192,10 +1210,12 @@
    "source": [
     "X_test_preprocessed_df = pd.DataFrame(X_test_preprocessed, columns=X_test.columns)\n",
     "feature = sorted(p_i, key=lambda x: x[1], reverse=True)[0][0]\n",
-    "pdp_isolated = get_pdp_isolated(X_test_preprocessed_df, clf.best_estimator_, feature)\n",
+    "feature = 'Violations'\n",
+    "pdp_isolated = get_pdp_isolated(X_test_preprocessed_df, model, feature)\n",
     "pdp_plot(pdp_isolated, feature_name=feature)\n",
     "### BEGIN HIDDEN STATES\n",
     "from pdpbox.pdp import PDPIsolate\n",
+    "\n",
     "assert isinstance(pdp_isolated, PDPIsolate)\n",
     "### END HIDDEN STATES"
    ]
@@ -1236,7 +1256,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "3876334a989f25d620e602b90ca6cf72",
+     "checksum": "48e304e0601de80131ff0be8f3f69ed5",
      "grade": false,
      "grade_id": "3-2_interpretation",
      "locked": false,
@@ -1259,7 +1279,7 @@
     "# YOUR CODE HERE\n",
     "\n",
     "\n",
-    "# YOUR CODE ENDS HERE\n"
+    "# YOUR CODE ENDS HERE"
    ]
   },
   {
@@ -1318,7 +1338,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "162391fa650a6c58844d5f0790127d36",
+     "checksum": "1390fda3d88ca731dc6dde2286da6891",
      "grade": false,
      "grade_id": "3-3",
      "locked": false,
@@ -1331,14 +1351,15 @@
    "source": [
     "from pdpbox.pdp import pdp_interact, pdp_interact_plot\n",
     "\n",
+    "\n",
     "def get_pdp_interaction(df, best_estimator, features):\n",
     "    pdp_interaction = None\n",
-    "    \n",
+    "\n",
     "    # YOUR CODE HERE\n",
     "    \n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
-    "    \n",
+    "\n",
     "    return pdp_interaction"
    ]
   },
@@ -1351,7 +1372,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "a441ec169e06cb9d3478ad072d5d4ec9",
+     "checksum": "b004d378d7d418ecd7ae61119a299956",
      "grade": true,
      "grade_id": "3-3_test_code",
      "locked": true,
@@ -1363,14 +1384,17 @@
    },
    "outputs": [],
    "source": [
-    "features = list(map(lambda x: x[0], sorted(p_i, key=lambda x: x[1], reverse=True)))[:2]\n",
-    "pdp_interaction = get_pdp_interaction(X_test_preprocessed_df, clf.best_estimator_, features)\n",
-    "pdp_interact_plot(pdp_interaction, feature_names=features, plot_type='grid')"
+    "# features = list(map(lambda x: x[0], sorted(p_i, key=lambda x: x[1], reverse=True)))[:2]\n",
+    "features = ('Violations', 'Inspection Type')\n",
+    "pdp_interaction = get_pdp_interaction(\n",
+    "    X_test_preprocessed_df, model, features\n",
+    ")\n",
+    "pdp_interact_plot(pdp_interaction, feature_names=features, plot_type=\"grid\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0e4fbbe4",
+   "id": "21c58bfa",
    "metadata": {},
    "source": [
     "---"
@@ -1378,7 +1402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cb5d8d0",
+   "id": "b53cbad6",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
