feature explanation fixed

--- a/Part1_3.ipynb
+++ b/Part1_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d1355513",
+   "id": "7407cb58",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54a9c294",
+   "id": "c445b5d6",
    "metadata": {},
    "source": [
     "---"
@@ -206,7 +206,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "93a826b6dbeaa499b61f199a2862cb4a",
+     "checksum": "9808f07207221b7b81d6c03be8d2e245",
      "grade": false,
      "grade_id": "cell-2e2530fc1a4e5a3b",
      "locked": true,
@@ -218,9 +218,9 @@
    "source": [
     "## 컬럼 설명\n",
     "\n",
-    "- DBA: 설립 시 서류에 등록한 이름\n",
+    "- **DBA**: 설립 시 서류에 등록한 이름\n",
     "\n",
-    "- AKA: 대중들에게 알려져 있는 상표 이름\n",
+    "- **AKA**you : 대중들에게 알려져 있는 상표 이름\n",
     "\n",
     "- License number: 사업자 고유번호 (사업자등록번호)\n",
     "\n",
@@ -940,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9418f6bf",
+   "id": "31205907",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21c58bfa",
+   "id": "ca51ae2a",
    "metadata": {},
    "source": [
     "---"
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b53cbad6",
+   "id": "0feff730",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
