--- a/Part1_3.ipynb
+++ b/Part1_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7407cb58",
+   "id": "3b09620e",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c445b5d6",
+   "id": "56ad5308",
    "metadata": {},
    "source": [
     "---"
@@ -199,6 +199,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a28fd02f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test['Inspection Fail']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a94d9ce7",
    "metadata": {
@@ -206,7 +216,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "9808f07207221b7b81d6c03be8d2e245",
+     "checksum": "865a62ad3da77723e5cdeac90e438900",
      "grade": false,
      "grade_id": "cell-2e2530fc1a4e5a3b",
      "locked": true,
@@ -222,34 +232,31 @@
     "\n",
     "- **AKA**you : 대중들에게 알려져 있는 상표 이름\n",
     "\n",
-    "- License number: 사업자 고유번호 (사업자등록번호)\n",
+    "- **License number**: 사업자 고유번호 (사업자등록번호)\n",
     "\n",
-    "- Type of facility: 매장 업종 \n",
+    "- **Type of facility**: 매장 업종 \n",
     "\n",
     "    bakery, banquet hall, candy store, caterer, coffee shop, day care center (for ages less than 2), day care center (for ages 2 – 6), day care center (combo, for ages less than 2 and 2-6 combined), gas station, Golden Diner, grocery store, hospital, long term care center(nursing home), liquor store, mobile food dispenser, restaurant, paleteria, school, shelter, tavern, social club, wholesaler, or Wrigley Field Rooftop.\n",
     "    \n",
-    "- Risk category of facility: 위험 시설 분류 카테고리 : 국민 건강에 악영향을 미칠 위험으로 분류됩니다. 1이 가장 높고, 3이 가장 낮은 카테고리. (위험 1 시설이 검사 빈도가 높은 편이고, 위험 3 시설이 검사 빈도가 낮은 편입니다.)\n",
-    "\n",
-    "- Street address, city, state and zip code of facility: 해당 시설이 위치한 주소 (Full Address)\n",
-    "\n",
-    "- Inspection date: 검사 날짜. (어떤 사업장은 동일한 사업장명에 각기 다른 검사 날짜를 가지고 있을 수도 있습니다.)\n",
-    "\n",
-    "- Inspection type: 검사 유형. 대부분의 유형에 대해 재검사를실시할 수 있으며, 다음과 같이 표시됩니다.\n",
-    "    - 캔버스 : 시설의 위험도와 관련된 가장 이란적인 유형의 검사. \n",
-    "    - 협의 : 개업 전 소유자의 요청으로 검사를 수행.\n",
-    "    - 불만 접수 : 민원 사항 발생 시 검사를 수행할 때.\n",
-    "    - 면허 : 사업장의 영업허가서 발금 요건으로 검사를 할 때.\n",
-    "    - 식중독 의심 : 사업장에서 식사 (민원 처리 된 특정 유형의 검사)로 인해 병에 걸렸다고 주장하는 1인 이상에게 검사를 할 때.\n",
-    "    - 태스크포스 검사 : 술집 또는 주점의 검사가 수행된 경우\n",
     "    \n",
-    "- Results: 검사 결과. 통과 / 조건부 합격 / 실패 \n",
-    "    - '합격'을 받는 사업장은 중대하거나 심각한 위반이없는 것으로 확인되었습니다. (각각 1-14번, 15-29번)\n",
-    "    - '조건부 합격'을 받은 업소는 위반사항이 중대하거나 심각한 것으로 조사되었으나, 이는 점검과정에서 시정되었습니다.\n",
-    "    - '실패'를 받은 업소는 검사 중 시정할 수 없는 중대 또는 중대 위반 사항이 있는 것으로 확인되었습니다.\n",
-    "    - 시설에서 실패를 받는다고 해서 반드시 사업장 면허가 정지되는 것은 아닙니다.\n",
-    "    - 폐업했거나 소재하지 않은 업소도 동일하게 표시됩니다.\n",
+    "- **Risk**: 위험 시설 분류 카테고리 : 국민 건강에 악영향을 미칠 위험이 얼마나 높은 시설인가? (1이 가장 높고, 3이 가장 낮은 카테고리임. 위험 1 시설이 검사 빈도가 높은 편이고, 위험 3 시설이 검사 빈도가 낮은 편)\n",
+    "\n",
+    "- **Address, City, State, Zip**: 해당 시설이 위치한 주소 (Full Address)\n",
+    "\n",
+    "- **Inspection date**: 검사 날짜. (어떤 사업장은 동일한 사업장명에 각기 다른 검사 날짜를 가지고 있을 수도 있음)\n",
+    "\n",
+    "- **Inspection type**: 검사 유형. (각 이유에 대해 Re-inspection이 붙으면 재검사한 것)\n",
+    "    - Canvass : 시설의 위험도와 관련된 가장 이란적인 유형의 검사. \n",
+    "    - Consultation : 개업 전 소유자의 요청으로 검사를 수행.\n",
+    "    - Complaint : 민원 사항 발생 시 검사를 수행할 때.\n",
+    "    - License : 사업장의 영업허가서 발금 요건으로 검사를 할 때.\n",
+    "    - Suspect Food Poisoning : 사업장에서 식사 (민원 처리 된 특정 유형의 검사)로 인해 병에 걸렸다고 주장하는 1인 이상에게 검사를 할 때.\n",
+    "    - Task-force Inspection : 술집 또는 주점의 검사가 수행된 경우\n",
     "    \n",
-    "- Violations: 위반사항. 설립자는 45개 이상의 고유 위반 번호 (위반번호 1-44 및 70)을 받을 수 있습니다. 열거된 각 위반번호에 대하여 위반 사항을 발행하기 된 소견 및 해당 업소가 시정해야 하는 요건에 대한 구체적인 설명이 이어집니다."
+    "- **Inspection Fail**: 검사 결과(통과가 실패헀는지 여부)\n",
+    "    - 실패를 받는다고 해서 반드시 사업장 면허가 정지되는 것은 아님.\n",
+    "    \n",
+    "- **Violations**: 위반사항. 위반사항을 지칭하는 고유번호와 위반한 사항 및 시정 요건에 대한 설명이 주어짐."
    ]
   },
   {
@@ -940,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31205907",
+   "id": "6013dab3",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1151,7 +1158,7 @@
    "metadata": {},
    "source": [
     "## 3.2 1변수 PDP Plot을 생성하는 `get_pdp_isolated` 함수를 작성하세요.\n",
-    "- `feature` 인자를 기준으로 1변수 PDP Plot을 생성합니다."
+    "- `feature`의 특성을 변수로 하는 1변수 PDP Plot을 생성합니다."
    ]
   },
   {
@@ -1338,7 +1345,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "1390fda3d88ca731dc6dde2286da6891",
+     "checksum": "e2f4637b594c267a1b73ab726ef989ad",
      "grade": false,
      "grade_id": "3-3",
      "locked": false,
@@ -1352,7 +1359,7 @@
     "from pdpbox.pdp import pdp_interact, pdp_interact_plot\n",
     "\n",
     "\n",
-    "def get_pdp_interaction(df, best_estimator, features):\n",
+    "def get_pdp_isolated(dataset, model, features):\n",
     "    pdp_interaction = None\n",
     "\n",
     "    # YOUR CODE HERE\n",
@@ -1394,7 +1401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca51ae2a",
+   "id": "bbc61e7b",
    "metadata": {},
    "source": [
     "---"
@@ -1402,7 +1409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0feff730",
+   "id": "06057f82",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
