--- a/Part1_3.ipynb
+++ b/Part1_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3b09620e",
+   "id": "c5568dde",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56ad5308",
+   "id": "186472ea",
    "metadata": {},
    "source": [
     "---"
@@ -706,7 +706,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "4db5632ff4cf946db2c75f46899aabe9",
+     "checksum": "2334262c8e580e4db1e61119dd068118",
      "grade": false,
      "grade_id": "cell-f54c8204c1a466c0",
      "locked": true,
@@ -722,7 +722,7 @@
     "    - 적어도 두 개 이상의 하이퍼파라미터에 대해 탐색을 진행하세요.\n",
     "    - auc score을 최대화하는 하이퍼파라미터 조합을 선택하세요.\n",
     "- RandomForestClassifier, RandomizedSearchCV 등 랜덤성이 포함되는 방법론에 대해 모두 `random_state=42`로 하세요.\n",
-    "- cv는 10 이하, n_iter은 5회 이하로 하세요."
+    "- cv는 5 이하, n_iter은 10회 이하로 하세요."
    ]
   },
   {
@@ -1203,7 +1203,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "4160913f948338d22ef461e7a89ff211",
+     "checksum": "a5fe42febc266784ab70425ce2fe5bc7",
      "grade": true,
      "grade_id": "3-2_test_code",
      "locked": true,
@@ -1217,7 +1217,6 @@
    "source": [
     "X_test_preprocessed_df = pd.DataFrame(X_test_preprocessed, columns=X_test.columns)\n",
     "feature = sorted(p_i, key=lambda x: x[1], reverse=True)[0][0]\n",
-    "feature = 'Violations'\n",
     "pdp_isolated = get_pdp_isolated(X_test_preprocessed_df, model, feature)\n",
     "pdp_plot(pdp_isolated, feature_name=feature)\n",
     "### BEGIN HIDDEN STATES\n",
@@ -1379,7 +1378,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "b004d378d7d418ecd7ae61119a299956",
+     "checksum": "9d75f6f5508615f8abd9116e1785c144",
      "grade": true,
      "grade_id": "3-3_test_code",
      "locked": true,
@@ -1391,8 +1390,7 @@
    },
    "outputs": [],
    "source": [
-    "# features = list(map(lambda x: x[0], sorted(p_i, key=lambda x: x[1], reverse=True)))[:2]\n",
-    "features = ('Violations', 'Inspection Type')\n",
+    "features = list(map(lambda x: x[0], sorted(p_i, key=lambda x: x[1], reverse=True)))[:2]\n",
     "pdp_interaction = get_pdp_interaction(\n",
     "    X_test_preprocessed_df, model, features\n",
     ")\n",
@@ -1401,7 +1399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbc61e7b",
+   "id": "7739bc8c",
    "metadata": {},
    "source": [
     "---"
@@ -1409,7 +1407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06057f82",
+   "id": "121d17a7",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
