performance criteria lowered / typo fixed

--- a/Part1_3.ipynb
+++ b/Part1_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c5568dde",
+   "id": "953d0873",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "186472ea",
+   "id": "e0be274e",
    "metadata": {},
    "source": [
     "---"
@@ -706,7 +706,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "2334262c8e580e4db1e61119dd068118",
+     "checksum": "0e0d383a809b0db08cdfc593eae41616",
      "grade": false,
      "grade_id": "cell-f54c8204c1a466c0",
      "locked": true,
@@ -721,7 +721,6 @@
     "- `RandomizedSearchCV`를 사용해 CV를 진행하세요.\n",
     "    - 적어도 두 개 이상의 하이퍼파라미터에 대해 탐색을 진행하세요.\n",
     "    - auc score을 최대화하는 하이퍼파라미터 조합을 선택하세요.\n",
-    "- RandomForestClassifier, RandomizedSearchCV 등 랜덤성이 포함되는 방법론에 대해 모두 `random_state=42`로 하세요.\n",
     "- cv는 5 이하, n_iter은 10회 이하로 하세요."
    ]
   },
@@ -733,7 +732,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "a5cbb141ba5bf08e2da2c300236e2a4b",
+     "checksum": "05f494d80d3cf5b297f22fb17140c3ef",
      "grade": false,
      "grade_id": "2-2",
      "locked": false,
@@ -757,7 +756,7 @@
     "\n",
     "def fit(X_train, y_train):\n",
     "    pipeline = None # pipeline = make_pipeline(...)\n",
-    "    clf = None  # clf = RandomizedSearchCV(...)\n",
+    "    clf = None  # clf = RandomizedSearchCV(pipeline, ...)\n",
     "\n",
     "    # YOUR CODE HERE\n",
     "    \n",
@@ -813,7 +812,7 @@
    "metadata": {},
    "source": [
     "### 아래 셀을 실행시켜 모델의 Test score을 확인해 보세요.\n",
-    "- auc_score > 0.7을 만족하면 기본 성능점수를 얻습니다.\n",
+    "- auc_score > 0.65을 만족하면 기본 성능점수를 얻습니다.\n",
     "- (도전과제) auc_score > 0.8을 만족하면 성능점수 만점을 얻습니다.\n",
     "    - 도전과제까지 수행해야 스챌 3점을 얻습니다. \n",
     "    - 1.3으로 돌아가 다양한 특성 조합을 시도해 보세요. \n",
@@ -1344,7 +1343,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "e2f4637b594c267a1b73ab726ef989ad",
+     "checksum": "8874910b312630384fab2f9a5cd8571b",
      "grade": false,
      "grade_id": "3-3",
      "locked": false,
@@ -1358,7 +1357,7 @@
     "from pdpbox.pdp import pdp_interact, pdp_interact_plot\n",
     "\n",
     "\n",
-    "def get_pdp_isolated(dataset, model, features):\n",
+    "def get_pdp_interaction(dataset, model, features):\n",
     "    pdp_interaction = None\n",
     "\n",
     "    # YOUR CODE HERE\n",
@@ -1399,7 +1398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7739bc8c",
+   "id": "d1caf1aa",
    "metadata": {},
    "source": [
     "---"
@@ -1407,7 +1406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "121d17a7",
+   "id": "35ffdf1f",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
