--- a/Part1_3.ipynb
+++ b/Part1_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "132050d9",
+   "id": "0331e466",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d33d9aff",
+   "id": "849393e9",
    "metadata": {},
    "source": [
     "---"
@@ -216,7 +216,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "865a62ad3da77723e5cdeac90e438900",
+     "checksum": "394b74d7af30cee0e869e38eb5dcae91",
      "grade": false,
      "grade_id": "cell-2e2530fc1a4e5a3b",
      "locked": true,
@@ -230,7 +230,7 @@
     "\n",
     "- **DBA**: 설립 시 서류에 등록한 이름\n",
     "\n",
-    "- **AKA**you : 대중들에게 알려져 있는 상표 이름\n",
+    "- **AKA**: 대중들에게 알려져 있는 상표 이름\n",
     "\n",
     "- **License number**: 사업자 고유번호 (사업자등록번호)\n",
     "\n",
@@ -253,7 +253,7 @@
     "    - Suspect Food Poisoning : 사업장에서 식사 (민원 처리 된 특정 유형의 검사)로 인해 병에 걸렸다고 주장하는 1인 이상에게 검사를 할 때.\n",
     "    - Task-force Inspection : 술집 또는 주점의 검사가 수행된 경우\n",
     "    \n",
-    "- **Inspection Fail**: 검사 결과(통과가 실패헀는지 여부)\n",
+    "- **Inspection Fail**: 검사 결과(불합격 여부)\n",
     "    - 실패를 받는다고 해서 반드시 사업장 면허가 정지되는 것은 아님.\n",
     "    \n",
     "- **Violations**: 위반사항. 위반사항을 지칭하는 고유번호와 위반한 사항 및 시정 요건에 대한 설명이 주어짐."
@@ -924,7 +924,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "31e55dc861df4eb3332bb7a176fe9a37",
+     "checksum": "ca785473ae0459c3d5c2267f928eabac",
      "grade": false,
      "grade_id": "cell-0b8a22eeb09a60ef",
      "locked": true,
@@ -939,7 +939,7 @@
     "- 따라서, 2.2에서 생성한 pipeline을 **전처리를 위한 부분**과 **예측 모델**로 나눠 주어야 합니다.\n",
     "    - 전처리를 위한 부분을 거친 후에는 모든 특성들이 수치형이어야 합니다. \n",
     "- 아래 셀에서 해당 과정을 수행해 주세요.\n",
-    "    1. `pipeline`을 `preprocess_pipeline`과 `model_pipeline`으로 나눠 주세요.\n",
+    "    1. `pipeline`을 `preprocess_pipeline`과 `model`로 나눠 주세요.\n",
     "    2. `preprocess_pipeline`으로 `X_test`를 transform하여 `X_test_preprocessed`를 생성하세요."
    ]
   },
@@ -1233,7 +1233,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "2ad0664584f459b31cea2c80054c1762",
+     "checksum": "b03e8ed09a42a3dea4611776926c8517",
      "grade": false,
      "grade_id": "cell-7060a1b0a5f0cc81",
      "locked": true,
@@ -1250,7 +1250,7 @@
     "- **문제 1.** 위 Plot은 해당 특성에 따른 실제 label 값의 분포를 나타낸 것이다.\n",
     "- **문제 2.** 위 Plot은 해당 특성에 따른 모델의 label 예측값의 분포를 나타낸 것이다.\n",
     "- **문제 3.** 선형회귀 모델(Linear Regression)에서 isolated PDP는 데이터의 분포와는 무관하게 항상 직선이다.\n",
-    "- **문제 4.** 선형회귀 모델(Linear Regression)의 isolated PDP에서 여러 개의 ICE 곡선이 나올 수 있다.\n"
+    "- **문제 4.** 선형회귀 모델(Linear Regression)의 isolated PDP에서 여러 개의 서로 다른 ICE 곡선이 나올 수 있다.\n"
    ]
   },
   {
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "888f4d23",
+   "id": "0dbbdccb",
    "metadata": {},
    "source": [
     "---"
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35689e32",
+   "id": "ddacbb7f",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
