changed the introduction

--- a/n121-Bayes-Theorem/sprint_2_note_1_Bayes_Theorem.ipynb
+++ b/n121-Bayes-Theorem/sprint_2_note_1_Bayes_Theorem.ipynb
@@ -30,20 +30,20 @@
         "\n",
         "## 🏆 학습 목표 \n",
         "\n",
-        "- 이항 분포에 대해 설명할 수 있다.\n",
-        "- 조건부 확률에 대해 설명할 수 있다.\n",
-        "- 베이지안에 대해 설명할 수 있다.\n",
-        "---"
-      ],
-      "metadata": {
-        "id": "-c6ck6HlE5rn"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "이 노트는 아래의 구성으로 이뤄져 있습니다.\n",
-        "- **Part 0. 확률이란**  \n",
+        "- 이항 분포 (Binomial Distribution)에 대해 설명할 수 있다.\n",
+        "- 조건부 확률 (Conditional Probability)에 대해 설명할 수 있다.\n",
+        "- 베이지안 이론 (Bayesian Theorem)에 대해 설명할 수 있다.\n",
+        "---\n",
+        "\n",
+        "# **🪙 Note: Bayes Theorem의 이해**\n",
+        "데이터 분석은 확률변수를 기반으로 이루어 집니다. <br>\n",
+        "즉, 우리가 수집한 데이터를 어떤 확률변수의 표본 데이터라 가정한뒤, 데이터를 사용하여 해당 확률변수의 확률분포함수 모양을 결정합니다. <br>\n",
+        "이렇게 데이터 분석을 위해 우리는 기본적으로 확률과 여러 통계 분포에 대해 알고 있어야 합니다.<br>\n",
+        "이 Note를 통해 다양한 분포와 통계 개념에 대해 배워보도록 합니다.<br>\n",
+        "이 Note는 아래의 구성으로 이뤄져 있습니다.<br>\n",
+        "- **Part 0. 기획 배경** <br>\n",
+        "\n",
+        "- **Part 1. 확률이란**  \n",
         "  1-1. 전체 확률의 법칙 <br>\n",
         "  1-2. 확률 계산  \n",
         "\n",
@@ -52,11 +52,14 @@
         "  2-2. 이항 분포 Formula  <br>\n",
         "\n",
         "- **Part 2. 조건부 확률 (Conditional Distribution)**  \n",
+        "  3-1. 조건부 확률이란  <br>\n",
+        "  3-2. 조건부 확률의 예  <br>\n",
+        "  3-3. 조건부 확률 Formula  <br>\n",
         "\n",
-        "- **Part 4. Bayesian Theorem**\n"
+        "- **Part 4. Bayesian Theorem**"
       ],
       "metadata": {
-        "id": "DDx3sD0s0yMH"
+        "id": "-c6ck6HlE5rn"
       }
     },
     {
@@ -66,6 +69,20 @@
       ],
       "metadata": {
         "id": "WAtJd_6-eMOo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Part 0. 기획 배경**\n",
+        "- 데이터 분석은 확률과 통계적 모델링을 기반으로 합니다. <br>\n",
+        "여러분들은 이번 노트를 통해 동전던지기를 이용해 확률 개념에 대해서 배우고, <br>\n",
+        "이를 어떻게 데이터 modeling에 어떻게 접목할지 다양한 통계적 분포를 통해 배워보도록 합니다.\n",
+        "\n",
+        "- 다양한 시나오에서의 확률과 이를 어떻게 공식화 할지 유의해서 공부하도록 합니다."
+      ],
+      "metadata": {
+        "id": "Hrs_mnZqiK-k"
       }
     },
     {
