--- a/n111 & n112 - EDA/n111a-EDA(1).ipynb
+++ b/n111 & n112 - EDA/n111a-EDA(1).ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "n111a_EDA(1).ipynb",
+      "name": "n111a-EDA(1).ipynb",
       "provenance": [],
       "collapsed_sections": [
         "i0DT1hcYYDwo",
@@ -40,35 +40,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [
-        "# 설치\n",
-        "!sudo apt-get install -y fonts-nanum\n",
-        "!sudo fc-cache -fv\n",
-        "!rm ~/.cache/matplotlib -rf"
-      ],
-      "metadata": {
-        "id": "G5h99QI2YAUo"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 설정\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "plt.rc('font', family='NanumBarunGothic')\n",
-        "plt.rc('axes', unicode_minus=False)"
-      ],
-      "metadata": {
-        "id": "xrx6151-YJox"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# 1. 데이터셋 불러오기 및 확인 \n",
@@ -81,8 +52,7 @@
         "\n",
         "- row가 아닌 column에 '매출액', '영업이익' 이 가도록 데이터를 transpose 하세요.\n",
         "\n",
-        "- 이후 아래 링크를 참조하여 첫번째 row를 column name으로 설정하세요.\n",
-        "\n",
+        "- 이후 아래 링크를 참조하여 첫번째 row를 column name으로 설정하세요. </br>\n",
         "  https://stackoverflow.com/questions/31328861/python-pandas-replacing-header-with-top-row\n",
         "\n",
         "- 데이터의 dimension을 확인하세요.\n",
@@ -112,7 +82,6 @@
       "source": [
         "# 2. Feature Engineering\n",
         "- 아래 데이터를 참조하여 18/19년도에 대해서 Price to Dream Ratio(PDR)를 계산하세요.\n",
-        "\n",
         " ## $\\rm PDR = {시가총액 \\over 해당~기업이~포함된~전체~시장~규모(TAM)~\\times~시장점유율}$\n",
         "  - 변수 이름 `df3`로 데이터프레임을 생성합니다. 아래와 같은 형태이어야 합니다. \n",
         "  - feature 이름은 `PDR`로, `df3['PDR']`을 통해 `~` 값이 확인되어야 합니다. 다음 전제조건을 활용하세요.\n",
@@ -151,8 +120,7 @@
         "\n",
         "- 와인 데이터셋을 사용합니다. \n",
         "\n",
-        "- 공식문서를 참조하여 중복된 데이터를 모두 확인해 봅니다.\n",
-        "\n",
+        "- 공식문서를 참조하여 중복된 데이터를 모두 확인해 봅니다. </br>\n",
         "  https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.duplicated.html "
       ],
       "metadata": {
