update n124a-Bayes Theorem.ipynb

--- a/n121-Bayes-Theorem/n124a-Bayes Theorem.ipynb
+++ b/n121-Bayes-Theorem/n124a-Bayes Theorem.ipynb
@@ -8,11 +8,11 @@
       "source": [
         "<img src='https://i.imgur.com/RDAD11M.png' width = '200' align = 'right'>\n",
         "\n",
-        "## *DATA SCIENCE / SECTION 1 / SPRINT 2 / NOTE 4*\n",
+        "## *DATA SCIENCE / SECTION 1 / SPRINT 2 / NOTE 1*\n",
         "\n",
-        "# 📝 Assignment\n",
+        "---\n",
         "\n",
-        "# 베이지안 통계"
+        "# 📝 Assignment"
       ]
     },
     {
@@ -21,11 +21,13 @@
         "id": "lPwZPpad3UOc"
       },
       "source": [
-        "## 1. Multiple Choice Test\n",
+        "# 1. Multiple Choice Test\n",
         "\n",
         "객관식 문제를 푸는 과정에서, 학생은 답을 이미 알고 있거나 찍어야 합니다. \n",
         "\n",
-        "학생이 답을 알 확률은 $p$이고, 답을 찍어서 맞출 확률이 $1\\over{m}$ 이라고 할 때 $m$과 $p$를 입력받아 학생이 문제의 답을 알고 맞췄을 확률을 계산하는 함수를 작성하세요."
+        "학생이 답을 알 확률은 $p$이고, 답을 찍어서 맞출 확률은 $1\\over{m}$입니다. \n",
+        "\n",
+        "$m$과 $p$를 입력받아 학생이 문제의 답을 맞춘 상태에서 알고 있었을 확률을 계산하는 함수를 작성하세요."
       ]
     },
     {
@@ -46,7 +48,7 @@
         "id": "MttKho9sgLdg"
       },
       "source": [
-        "## 2. Blood Test\n",
+        "# 2. Blood Test\n",
         "\n",
         "특정 질병을 가지고 있는 경우 **99%** 의 확률로 탐지 할 수 있는 실험방법이 있습니다.\n",
         "\n",
@@ -66,7 +68,7 @@
       "outputs": [],
       "source": [
         "def disease(prior, tpr, fpr):\n",
-        "  # 코드를 작성하세요"
+        "  # 코드를 작성하세요."
       ]
     },
     {
@@ -75,8 +77,7 @@
         "id": "GP7Jv1XvwtkX"
       },
       "source": [
-        "## 🔥 도전 과제:\n",
-        "\n"
+        "# 🔥 도전 과제:"
       ]
     },
     {
@@ -85,7 +86,7 @@
         "id": "M3WuZEGM3UOd"
       },
       "source": [
-        "### 다음 문제를 읽고 답을 구하세요 \n",
+        "## 다음 문제를 읽고 답을 구하세요 .\n",
         "> Source : Introduction to Probability and Statistics for Engineers and Scientists, 4th Ed.\n",
         "\n",
         "At a certain stage of a criminal investigation, the inspector in charge is **60%** convinced of the guilty of a certain suspect. <br>\n",
@@ -101,7 +102,7 @@
       },
       "outputs": [],
       "source": [
-        "# 이 곳에 답안을 작성하시기 바랍니다"
+        "# 이 곳에 답안을 작성하시기 바랍니다."
       ]
     },
     {
@@ -122,7 +123,7 @@
       },
       "outputs": [],
       "source": [
-        "# 이 곳에 답안을 작성하시기 바랍니다"
+        "# 이 곳에 답안을 작성하시기 바랍니다."
       ]
     }
   ],
