--- a/n111 & n112 - EDA/n111a-EDA(1).ipynb
+++ b/n111 & n112 - EDA/n111a-EDA(1).ipynb
@@ -52,7 +52,8 @@
         "\n",
         "- row가 아닌 column에 '매출액', '영업이익' 이 가도록 데이터를 transpose 하세요.\n",
         "\n",
-        "- 이후 아래 링크를 참조하여 첫번째 row를 column name으로 설정하세요. </br>\n",
+        "- 이후 아래 링크를 참조하여 첫번째 row를 column name으로 설정하세요.\n",
+        "\n",
         "  https://stackoverflow.com/questions/31328861/python-pandas-replacing-header-with-top-row\n",
         "\n",
         "- 데이터의 dimension을 확인하세요.\n",
@@ -69,7 +70,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 이 곳에 답안을 작성해 주세요. "
+        "# 이 곳에 답안을 작성하시기 바랍니다."
       ],
       "metadata": {
         "id": "fdChgGWZYNMd"
@@ -105,7 +106,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 이 곳에 답안을 작성해 주세요. "
+        "# 이 곳에 답안을 작성하시기 바랍니다."
       ],
       "metadata": {
         "id": "cwCTrQGICnQ5"
@@ -130,10 +131,98 @@
     {
       "cell_type": "code",
       "source": [
-        "# 이 곳에 답안을 작성해 주세요. "
+        "# 이 곳에 답안을 작성하시기 바랍니다."
       ],
       "metadata": {
         "id": "-maZeiDRCrTS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 🔥 도전과제 "
+      ],
+      "metadata": {
+        "id": "MyRguruspz0r"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## NA Value Handling\n",
+        "\n",
+        "- 데이터셋을 불러옵니다. \n",
+        "\n",
+        "- 19년도 4분기의 당기순이익(비지배) 부분을 Na로 대체하세요\n",
+        "\n",
+        "- 이후 해당 결측치를 mean imputation 방법을 사용하여 처리하세요.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "L-AwhPnIIxHF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "url = 'https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/kt%26g/kt%26g_0.csv'\n",
+        "headers = ['분기', '매출액', '영업이익', '영업이익(발표기준)', '세전계속사업이익',\n",
+        "           '당기순이익', '당기순이익(지배)', '당기순이익(비지배)', '자산총계', '부채총계',\n",
+        "           '자본총계', '자본총계(지배)', '자본총계(비지배)', '자본금', '영업활동현금흐름',\n",
+        "           '투자활동현금흐름', '재무활동현금흐름', '영업이익률', '순이익률', 'ROE(%)',\n",
+        "           'ROA(%)', '부채비율', '자본유보율', 'EPS(원)', 'PER(배)']"
+      ],
+      "metadata": {
+        "id": "aPF6bu7Btj6m"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 이 곳에 답안을 작성하시기 바랍니다."
+      ],
+      "metadata": {
+        "id": "Dnzz6E6NI2fo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Feature Engineering\n",
+        "\n",
+        "Relative Perfomance 라는 새로운 feature를 계산하세요.\n",
+        "\n",
+        "이는 최근 1년치 매출액의 평균값을 기준으로 \n",
+        "\n",
+        "- 10% 이상 -> `S`\n",
+        "- 5% 이상 -> `A`\n",
+        "- -5 ~ 5% -> `B`\n",
+        "- -5%이하 -> `C`\n",
+        "- 10%이하 -> `D`\n",
+        "\n",
+        "라는 값을 갖는 feature입니다.\n",
+        "\n",
+        "20년도 2분기에 해당하는 결과값은 `A`가 나와야합니다.\n",
+        "\n",
+        "각각에 해당하는 등급이 나오기 위해서 필요한 매출액을 추가로 서술하세요."
+      ],
+      "metadata": {
+        "id": "OdkYeI7iI67N"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 이 곳에 답안을 작성하시기 바랍니다."
+      ],
+      "metadata": {
+        "id": "b96DAW1KJAT9"
       },
       "execution_count": null,
       "outputs": []
