--- a/n113 & 114 - Data Wrangling/n113a-Data Wrangling(1).ipynb
+++ b/n113 & 114 - Data Wrangling/n113a-Data Wrangling(1).ipynb
@@ -53,7 +53,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 이 곳에 답안을 작성하세요. "
+        "# 이 곳에 답안을 작성하시기 바랍니다. "
       ],
       "metadata": {
         "id": "dSoaryevtEus"
@@ -95,7 +95,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 이 곳에 답안을 작성하세요. "
+        "# 이 곳에 답안을 작성하시기 바랍니다. "
       ],
       "metadata": {
         "id": "OJsU_RtEvCjj"
@@ -112,10 +112,7 @@
         "- 정규표현식에 대하여 찾아보고, 다음 method를 사용하여 문제를 풀어 보세요. \n",
         "  - `search`\n",
         "  - `findall`\n",
-        "  - `sub`\n",
-        "\n",
-        "- 정규 표현식 연습하기 -> 레퍼런스 </br>\n",
-        "  https://regexone.com/"
+        "  - `sub`"
       ],
       "metadata": {
         "id": "-LCiME2aQnw7"
@@ -378,10 +375,68 @@
     {
       "cell_type": "code",
       "source": [
-        "# 이 곳에 답안을 작성하세요. "
+        "# 이 곳에 답안을 작성하시기 바랍니다. "
       ],
       "metadata": {
         "id": "ue62CQ5Ru-9L"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 🔥 도전과제 \n",
+        "\n",
+        "**해당 도전과제는 n114의 도전과제로 이어집니다.**"
+      ],
+      "metadata": {
+        "id": "pI7QskrMv7k1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## concat\n",
+        "\n",
+        "- 주어진 6개의 데이터를 `.concat()`을 활용하여 1개로 합칩니다. \n",
+        "  - 데이터를 transpose 합니다.\n",
+        "  - 첫 번째 row를 column name으로 설정합니다. \n",
+        "  - `매출액`, `자본총계`, `EPS(원)` column만 사용합니다.\n",
+        "  - 제일 최근 분기의 데이터만 사용합니다. \n",
+        "\n",
+        "- 기존 데이터와 `종목명` 데이터를 `.concat()`을 사용하여 합칩니다.\n",
+        "  - 다음과 같은 `종목명` 데이터를 생성합니다.\n",
+        "\n",
+        "||종목명|\n",
+        "|:-:|:-:|\n",
+        "|0|하이트진로|\n",
+        "|1|보해양조|\n",
+        "|2|롯데칠성|\n",
+        "|3|마니커|\n",
+        "|4|이지홀딩스|\n",
+        "|5|하림| \n",
+        "\n",
+        "- 합친 이후의 index는 `분기`로 설정하고, 기존 index는 drop 합니다. \n",
+        "  - 다음과 같은 결과가 나와야 합니다. \n",
+        "\n",
+        "||매출액|자본총계|EPS(원)|종목명|\n",
+        "|:-:|:-:|:-:|:-:|:-:|\n",
+        "|2020/09|6,243|10,897|453|하이트진로|\n",
+        "|...|...|...|...|...|\n",
+        "|2020/09|2,613|2,695|62|하림|"
+      ],
+      "metadata": {
+        "id": "yOTS2BTpagsV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 이 곳에 답안을 작성하시기 바랍니다. "
+      ],
+      "metadata": {
+        "id": "h1GfjAC9Zu12"
       },
       "execution_count": null,
       "outputs": []
