--- a/n121-Bayes-Theorem/sprint_2_note_1_Bayes_Theorem.ipynb
+++ b/n121-Bayes-Theorem/sprint_2_note_1_Bayes_Theorem.ipynb
@@ -376,9 +376,9 @@
         "\n",
         "위에서 우리는 경우의 수를 확인했습니다. 각 경우에 대한 확률을 구해보도록 합니다. <br>\n",
         "확률을 확인하기 위해서는 아래의 과정을 따릅니다.\n",
-        "  1. 총 경우의 수 확인\n",
-        "  2. 구하고자 하는 경우의 수 확인 \n",
-        "  3. `1.`과 `2.`를 이용해 확률 계산\n",
+        "  1. 원하는 사건이 일어나는 총 경우의 수 확인\n",
+        "  2. 각 사건이 발생하는 확률 확인 \n",
+        "  3. `1.`과 `2.`를 이용해 총 확률 계산\n",
         "\n",
         "**공평한 동전을 던졌을때의 확률** <br>\n",
         "  - **동전을 다섯번 던져 앞면이 하나가 나올 확률** <br>\n",
@@ -459,7 +459,7 @@
         "위에서 우리는 동전던지기와 같은 각 사건이 독립적이고, 두가지의 결과를 가지는 사건의 확률을 결정하는 이항 분포의 다양한 경우와 그 확률을 확인해 보았습니다. 그리고 각 사건의 확률을 도출하는데 일관적인 공식을 배워보도록 합니다.\n",
         "\n",
         "동전을 **`n번`** 던져 앞면이 **`k번`** 나올 확률 <br>\n",
-        "  1. n번 동전을 던저 앞면이 k번 나오는 경우의 수: **`n! / k!(n-k)!`**\n",
+        "  1. n번 동전을 던저 앞면이 k번 나오는 경우의 수: $n! / k!(n-k)!$\n",
         "  2. k번 앞면이 나오고 n-k번 뒷면이 나오는 확률: ${p^k}{(1-p)^{(n-k)}}$\n",
         "  3. 이항 분포의 Formula: <br>\n",
         "  **`n번 동전을 던저 앞면이 k번 나오는 경우의 수`** x **`k번 앞면이 나오고 n-k번 뒷면이 나오는 확률`** <br>\n",
@@ -669,16 +669,16 @@
       "source": [
         "위에서 배운 조건부 확률을 베이지안 이론으로 확장시켜보도록 합니다.\n",
         "\n",
-        "Bayesian Theorem은 아래의 공식을 통해 알 수 있습니다.\n",
+        "Bayesian Theorem의 공식은 아래와 같습니다.\n",
         "\n",
-        "- **P(A|B) = P(B|A)P(A) / P(B)**\n",
+        "- **P(A|B) = P(B|A) x P(A) / P(B)**\n",
         "\n",
         "<br>\n",
         "\n",
         "Bayesian Theorem을 위에서 배운 암을 진단하는 테스트에 적용하여 이해해보도록 합니다.\n",
         "\n",
         "> **시나리오** <br>\n",
-        "전체 인구중 1% 정도가 걸리는 암이 있습니다. 암이 있는 사람중 90% 는 테스트에서 positive하게 나옵니다. 암이 없는 사람중 90%는 테스트에서 Negative하게 나옵니다.\n",
+        "전체 인구중 1% 정도가 걸리는 암이 있습니다. 암이 있는 사람중 90% 는 테스트에서 `positive`하게 나옵니다. 그리고 암이 없는 사람중 90%는 테스트에서 `Negative`하게 나옵니다.\n",
         ">\n",
         ">- **`P(C)`** = 0.01\n",
         "- **`P(Pos|C)`** = 0.9\n",
@@ -694,12 +694,12 @@
         "\n",
         "> **🔎 Quiz** <br> \n",
         "어떤 증상 없이, 여러분들은 테스트를 진행했습니다. <br>\n",
-        "그리고 테스트에서 Positve가 나왔습니다. 암이 있을 확률  **P(Cancer|Positive)** 은 얼마인가요?\n",
+        "그리고 테스트에서 `positve`가 나왔습니다. 암이 있을 확률  **P(Cancer|Positive)** 은 얼마인가요?\n",
         "\n",
         "<br>\n",
         "\n",
-        "테스트에서 positive가 나오던 negative가 나오던 암에 걸릴 확률은 1%입니다. <br>\n",
-        "하지만, 만약 어떤 사람이 테스트에서 positive라고 나온 상황이면, 그 사람이 암이 있을 확률은 1%보다 높아집니다. 즉, **P(Cancer|Positive)**는 1%보다 높을것 입니다. 얼만큼 높아질까요? \n",
+        "테스트에서 `positive`가 나오던 `negative`가 나오던 암에 걸릴 확률은 1%입니다. <br>\n",
+        "하지만, 만약 어떤 사람이 테스트에서 `positive`라고 나온 상황이면, 그 사람이 암이 있을 확률은 1%보다 높아집니다. 즉, **P(Cancer|Positive)**는 1%보다 높을것 입니다. 얼만큼 높아질까요? \n",
         "\n",
         "이 질문에 답하기 위해 아래의 diagram을 확인해 보도록 합니다. \n",
         "\n",
@@ -708,16 +708,9 @@
         "<img width='600' src='https://i.imgur.com/wo9R4Dt.png'>\n",
         "\n",
         "\n",
-        "위의 질문은 녹색원안에 빨간 부분의 면적을 물어보는 질문입니다. <br>\n",
-        "  - **`P(Red part In Green circle)`**\n",
-        "  - **`암이 있고 테스트에서 Positive하게 나온 사람의 수 / 암이 있던 없던 테스트에서 Positive하게 나온 사람의 수`**\n",
-        "\n",
-        "<br>\n",
-        "\n",
-        "\n",
-        "조건부 확률에 의해 우리는 아래의 공식을 배웠습니다.\n",
-        "- **`P(Cancer|Positive) = P(Cancer & Positive) / P(Positive)`** <br>\n",
-        "- **`P(Cancer|Positive) = P(Cancer & Positive) / [P(positive & Cancer) + P(Positive & No Cancer)]`**\n",
+        "위의 질문 **P(Cancer|Positive)**는 녹색원 안에 빨간 부분의 면적을 물어보는 질문입니다. 그리고 조건부 확률에 의해 우리는 아래의 공식을 배웠습니다. <br>\n",
+        "  - **`P(Cancer|Positive) = P(Cancer & Positive) / P(Positive) = P(Cancer & Positive) / [P(positive & Cancer) + P(Positive & No Cancer)]`**\n",
+        "  - **`P(Red Part In Green Circle) = 암이 있고 테스트에서 Positive하게 나온 사람의 수 / 암이 있던 없던 테스트에서 Positive하게 나온 사람의 수`**\n",
         "\n",
         "<br>\n",
         "\n",
@@ -743,7 +736,7 @@
         "\n",
         "<img width='600' src='https://i.imgur.com/GMUZ2h3.png'>\n",
         "\n",
-        "그러므로 답은 0.0833으로 **8.33%** 입니다. 암이 있을 확률 1%보다, 환자가 테스트에서 Positive하게 나온것을 전제로 암이 있을 확률이 더 높아진것을 확인 할 수 있습니다. \n",
+        "그러므로 답은 0.0833으로 **8.3%** 입니다. 암이 있을 확률 1%보다, 환자가 테스트에서 Positive하게 나온것을 전제로 암이 있을 확률이 더 높아진것을 확인 할 수 있습니다. \n",
         "\n",
         "위의 테이블에서 계산한것을 아래의 diagram을 통해 좀더 직관적으로 확인 해보도록 합니다.\n",
         "\n",
@@ -760,6 +753,17 @@
       "metadata": {
         "id": "MBaBQvkdSEao"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "m93hy6S6Nc7A"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
