--- a/n121-Bayes-Theorem/sprint_2_note_1_Bayes_Theorem.ipynb
+++ b/n121-Bayes-Theorem/sprint_2_note_1_Bayes_Theorem.ipynb
@@ -587,6 +587,7 @@
         "- **`P(Pos|^C)`** = 0.2\n",
         "\n",
         "\n",
+        "\n",
         "<br>\n",
         "\n",
         "위의 정보들을 아래의 테이블에서 정리해보도록 합니다. \n",
@@ -597,25 +598,27 @@
         "\n",
         "위의 시나리오의 데이터를 통해 아래의 질문에 대답해 보도록 합니다.\n",
         "\n",
-        "  - **Q1.** 암이 없는 사람의 암진단 결과가 Negative로 나올 확률은 무엇인가요? <br>\n",
+        "  - **Q1.** 암이 있고, 암진단 테스트에서 Positive로 나올 확률은 무엇인가요? <br>\n",
+        "    **P(C $\\cap$ Pos) = P(Pos|C)P(C) = 0.1 x 0.9 = 0.09** <br>\n",
         "\n",
-        "    **`P(Neg|^C) = 1 - P(Pos|^C) = 1 - 0.2 = 0.8`**\n",
+        "  - **Q2.** 암이 있고, 암진단 테스트에서 Negative로 나올 확률은 무엇인가요? <br>\n",
+        "    **P(C $\\cap$ Neg) = P(Neg|C)P(C) = 0.1 x 0.1 = 0.01** <br>\n",
         "\n",
-        "  - **Q2.** 암이 있고, 암진단 테스트에서 Positive로 나올 확률은 무엇인가요? <br>\n",
-        "    **`P(C & Pos) = P(Pos|C)P(C) = 0.1 x 0.9 = 0.09`**\n",
+        "  - **Q3.** 암이 없고, 암진단 테스트에서 Positive로 나올 확률은 무엇인가요? <br>\n",
+        "    **P(^C $\\cap$ Pos) = P(Pos|^C)P(^C) 0.9 x 0.2 = 0.18** <br>\n",
         "\n",
-        "  - **Q3.** 암이 있고, 암진단 테스트에서 Negative로 나올 확률은 무엇인가요? <br>\n",
-        "    **`P(C & Neg) = P(Neg|C)P(C) = 0.1 x 0.1 = 0.01`**\n",
-        "\n",
-        "  - **Q4.** 암이 없고, 암진단 테스트에서 Positive로 나올 확률은 무엇인가요? <br>\n",
-        "    **`P(^C & Pos) = P(Pos|^C)P(^C) 0.9 x 0.2 = 0.18`**\n",
-        "\n",
-        "  - **Q5.** 암이 없고, 암진단 테스트에서 Negative로 나올 확률은 무엇인가요? <br>\n",
-        "    **`P(^C & Neg) = P(Neg|^C)P(^C) = 0.8 x 0.9 = 0.72`**\n",
+        "  - **Q4.** 암이 없고, 암진단 테스트에서 Negative로 나올 확률은 무엇인가요? <br>\n",
+        "    **P(^C $\\cap$ Neg) = P(Neg|^C)P(^C) = 0.8 x 0.9 = 0.72** <br>\n",
         "  \n",
-        "  - **Q6.** 암이 있던 없던, 전체 population에서 암진단에서 암이 있다고 나올 확률은 무엇인가요? \n",
+        "  - **Q5.** 암이 있던 없던, 전체 population에서 암진단에서 암이 있다고 나올 확률은 무엇인가요? \n",
         "\n",
-        "    **`P(Pos) = P(C)P(Pos|C) + P(^C)P(Pos|^C) = 0.1 x 0.9 + 0.9 x 0.2 = 0.27`**\n"
+        "    **P(Pos) = P(C)P(Pos|C) + P(^C)P(Pos|^C) = 0.1 x 0.9 + 0.9 x 0.2 = 0.27**\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "위에서 찾은 conditional probabilities를 통해, 추후 아래의 공식을 찾아 보도록 합니다. 참고로 아래의 공식이 나타내느 것이 Baysian Theorem 입니다.\n",
+        "- **P(C|Pos) = P(C $\\cap$  Pos) / P(Pos)** <br>\n",
+        "\n"
       ],
       "metadata": {
         "id": "lPCe9YMw9-s-"
@@ -638,10 +641,9 @@
         "<br>\n",
         "\n",
         "우리는 A와 B라는 두 사건의 조건부 확률을 아래와 같이 공식화 할 수 있습니다. <br>\n",
-        "- **P(A|B) = P(A $\\cap$  B) / P(B)**\n",
+        "- **P(A|B) = P(A $\\cap$  B) / P(B)** <br>\n",
         "\n",
-        "P(A)는 A의 사전 확률 (prio probability), P(A|B)는 A의 사후 확률 (posterior probability), P(B|A)는 \n",
-        "\n",
+        "<br>\n",
         "\n",
         "즉, 한 사람이 질병이 있고 테스트에서 질병이 있다고 나올 확률은 아래와 같습니다. <br>\n",
         "- **P(Positive|Disease) = P(Positive $\\cap$ Disease) / P(Disease)** \n",
@@ -671,14 +673,14 @@
         "\n",
         "Bayesian Theorem의 공식은 아래와 같습니다.\n",
         "\n",
-        "- **P(A|B) = P(B|A) x P(A) / P(B)**\n",
+        "- **P(A|B) = P(A $\\cap$  B) / P(B) = P(B|A) x P(A) / P(B)**\n",
         "\n",
         "<br>\n",
         "\n",
         "Bayesian Theorem을 위에서 배운 암을 진단하는 테스트에 적용하여 이해해보도록 합니다.\n",
         "\n",
         "> **시나리오** <br>\n",
-        "전체 인구중 1% 정도가 걸리는 암이 있습니다. 암이 있는 사람중 90% 는 테스트에서 `positive`하게 나옵니다. 그리고 암이 없는 사람중 90%는 테스트에서 `Negative`하게 나옵니다.\n",
+        "전체 인구중 1% 정도가 걸리는 암이 있습니다. 암이 있는 사람중 90% 는 테스트에서 **`positive`**하게 나옵니다. 그리고 암이 없는 사람중 90%는 테스트에서 **`Negative`**하게 나옵니다.\n",
         ">\n",
         ">- **`P(C)`** = 0.01\n",
         "- **`P(Pos|C)`** = 0.9\n",
@@ -694,12 +696,12 @@
         "\n",
         "> **🔎 Quiz** <br> \n",
         "어떤 증상 없이, 여러분들은 테스트를 진행했습니다. <br>\n",
-        "그리고 테스트에서 `positve`가 나왔습니다. 암이 있을 확률  **P(Cancer|Positive)** 은 얼마인가요?\n",
+        "그리고 테스트에서 **`positve`**가 나왔습니다. 암이 있을 확률  **P(Cancer|Positive)** 은 얼마인가요?\n",
         "\n",
         "<br>\n",
         "\n",
-        "테스트에서 `positive`가 나오던 `negative`가 나오던 암에 걸릴 확률은 1%입니다. <br>\n",
-        "하지만, 만약 어떤 사람이 테스트에서 `positive`라고 나온 상황이면, 그 사람이 암이 있을 확률은 1%보다 높아집니다. 즉, **P(Cancer|Positive)**는 1%보다 높을것 입니다. 얼만큼 높아질까요? \n",
+        "테스트에서 **`positive`**가 나오던 **`negative`**가 나오던 암에 걸릴 확률은 1%입니다. <br>\n",
+        "하지만, 만약 어떤 사람이 테스트에서 **`positive`**라고 나온 상황이면, 그 사람이 암이 있을 확률은 1%보다 높아집니다. 즉, **P(Cancer|Positive)**는 1%보다 높을것 입니다. 얼만큼 높아질까요? \n",
         "\n",
         "이 질문에 답하기 위해 아래의 diagram을 확인해 보도록 합니다. \n",
         "\n",
@@ -753,17 +755,6 @@
       "metadata": {
         "id": "MBaBQvkdSEao"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "m93hy6S6Nc7A"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
