--- a/n113 & 114 - Data Wrangling/n113a-Data Wrangling(1).ipynb
+++ b/n113 & 114 - Data Wrangling/n113a-Data Wrangling(1).ipynb
@@ -399,14 +399,16 @@
       "source": [
         "## concat\n",
         "\n",
-        "- 주어진 6개의 데이터를 `.concat()`을 활용하여 1개로 합칩니다. \n",
+        "- 주어진 6개의 데이터에 대하여 다음 업무를 수행합니다. \n",
         "  - 데이터를 transpose 합니다.\n",
         "  - 첫 번째 row를 column name으로 설정합니다. \n",
         "  - `매출액`, `자본총계`, `EPS(원)` column만 사용합니다.\n",
         "  - 제일 최근 분기의 데이터만 사용합니다. \n",
         "\n",
-        "- 기존 데이터와 `종목명` 데이터를 `.concat()`을 사용하여 합칩니다.\n",
-        "  - 다음과 같은 `종목명` 데이터를 생성합니다.\n",
+        "- 위의 업무를 모두 수행한 후 6개의 데이터를 `.concat()`을 활용하여 1개로 합칩니다. \n",
+        "\n",
+        "- 합친 데이터와 `종목명` 데이터를 `.concat()`을 사용하여 합칩니다.\n",
+        "  - 다음과 같은 `종목명` 데이터를 생성해야 합니다.\n",
         "\n",
         "||종목명|\n",
         "|:-:|:-:|\n",
@@ -429,6 +431,22 @@
       "metadata": {
         "id": "yOTS2BTpagsV"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data1 = 'https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/stocks/000080.csv'\n",
+        "data2 = 'https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/stocks/000890.csv'\n",
+        "data3 = 'https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/stocks/005300.csv'\n",
+        "data4 = 'https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/stocks/027740.csv'\n",
+        "data5 = 'https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/stocks/035810.csv'\n",
+        "data6 = 'https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/stocks/136480.csv'"
+      ],
+      "metadata": {
+        "id": "vad3qujyuxBY"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
